Thu Sep 11 19:04:40 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * CXX/libCXX.mpc:
        * XSCRT/XSCRT/utils/Reader_Writer_Base_T.cpp:

	  . Fixed build errors on non-Windows systems.
	
Tue Sep  9 22:21:47 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * XSCRT/XSCRT/utils/Buffer_Writer_T.h:
        * XSCRT/XSCRT/utils/Buffer_Writer_T.cpp:

          . Re-implemented the buffer writer so that it uses an internal
            buffer when writing the XML document. Also, implemented
            accessor methods for querying about the internal buffer.

Thu Sep  4 20:32:59 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * XSCRT/XSCRT/XSCRT.mpc:
        * XSCRT/XSCRT/utils/Buffer_Reader_T.h:
        * XSCRT/XSCRT/utils/Buffer_Reader_T.cpp:
        * XSCRT/XSCRT/utils/Buffer_Writer_T.h:
        * XSCRT/XSCRT/utils/Buffer_Writer_T.cpp:

          . First version of a buffer reader/writer for serializing/
            deserializing XML to C++ objects. The implementation is
            quick and dirty and can therefore benefit from several
            optimizations.

Tue Aug 19 13:40:00 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * CXX/Inline.cpp:
        * CXX/WriterSource.cpp:
        * XSCRT/XSCRT/Traversal.tpp:

          . Still trying to fix a bug related to using the <xsd:extension>
            tag. Committing current progress of bug resolution.

        * XSCRT/XSCRT/utils/Console_Error_Handler.cpp:

          . Updated the console error handlers to print the line and
            column number of the error.

Sat Aug 16 15:55:47 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>


        * XSCRT/XSCRT/XSCRT.mpc:
        * XSCRT/XSCRT/utils/Console_Error_Handler.h:
        * XSCRT/XSCRT/utils/Console_Error_Handler.cpp:
        * XSCRT/XSCRT/utils/File_Reader_T.h:
        * XSCRT/XSCRT/utils/File_Reader_T.cpp:
        * XSCRT/XSCRT/utils/File_Writer_T.h:
        * XSCRT/XSCRT/utils/File_Writer_T.cpp: